Updated authentication system with MySQL session storage

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -20,12 +20,12 @@
       <% } %>
 
       <form action="<%= link %>" method="post">
-        <input class="input" name="text" placeholder="Username" type="email" />
+        <input class="input" name="username" placeholder="Username" />
         <br />
         <br />
         <input
           class="input"
-          name="text"
+          name="password"
           placeholder="Password"
           type="password"
         />
