--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Express-Authentication/title>
+    <title>Express-Authentication</title>
     <link rel="icon" type="image/x-icon" href="/images/express-icon.png" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
