--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,79 @@ body {
   transition-delay: 0.4s;
   color: aliceblue;
 }
+.back-button {
+  display: block;
+  position: relative;
+  width: 56px;
+  height: 56px;
+  margin-left: -10px;
+  overflow: hidden;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  border: 0;
+}
+
+.back-button:before,
+.back-button:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  inset: 7px;
+}
+
+.back-button:before {
+  border: 4px solid #f0eeef;
+  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+
+.back-button:after {
+  border: 4px solid darkgray;
+  transform: scale(1.3);
+  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  opacity: 0;
+}
+
+.back-button:hover:before,
+.back-button:focus:before {
+  opacity: 0;
+  transform: scale(0.7);
+  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.back-button:hover:after,
+.back-button:focus:after {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+
+.back-button-box {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.back-button-elem {
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin: 17px 18px 0 18px;
+  transform: rotate(180deg);
+  fill: #1e1e2b;
+}
+
+.back-button:hover .button-box,
+.back-button:focus .button-box {
+  transition: 0.4s;
+  transform: translateX(-56px);
+}
+
 .input {
   width: 230px;
   background-color: #f5f5f5;
@@ -71,4 +144,19 @@ input:focus {
 
 input:hover {
   outline: 1px solid lightgrey;
+}
+form {
+  margin-top: 10px;
+}
+.alert {
+  font-size: 14px;
+  width: 245px;
+}
+.alert-success {
+  color: green;
+  background-color: lightgoldenrodyellow;
+}
+.alert-danger {
+  color: red;
+  background-color: lightgoldenrodyellow;
 }
